# ORT

src/: CMakeLists.txt  export2onnx.py  main.cpp
src/person_segmentator/: person_segmentator.cpp  person_segmentator.h
